internal/k8/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallet
  labels:
    app.kubernetes.io/name: wallet
